[tool.poetry]
name = "spark-delta"
version = "0.1.0"
description = ""
authors = ["Rafael", "Vinicius", "Juliano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.5"
jupyterlab = "^4.4.1"
delta-spark = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
